// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`svelte/UITitle > renders correctly - level 1 1`] = `
<h1
  class="ui-title large 1"
>
  <strong>
    Test
  </strong>
</h1>
`;

exports[`svelte/UITitle > renders correctly - level 2 1`] = `
<h2
  class="ui-title  2"
>
  <strong>
    Test
  </strong>
</h2>
`;

exports[`svelte/UITitle > renders correctly - level 3 1`] = `
<h3
  class="ui-title  3"
>
  <strong>
    Test
  </strong>
</h3>
`;

exports[`svelte/UITitle > renders correctly - level 4 1`] = `
<h4
  class="ui-title  4"
>
  <strong>
    Test
  </strong>
</h4>
`;

exports[`svelte/UITitle > renders correctly - level 5 1`] = `
<h5
  class="ui-title  5"
>
  <strong>
    Test
  </strong>
</h5>
`;

exports[`svelte/UITitle > renders correctly - level 6 1`] = `
<h6
  class="ui-title  6"
>
  <strong>
    Test
  </strong>
</h6>
`;

exports[`svelte/UITitle > renders correctly - modifier different than level 1`] = `
<h1
  class="ui-title 5 large"
>
  <strong>
    Test
  </strong>
</h1>
`;

exports[`svelte/UITitle > renders correctly - with id 1`] = `
<h1
  class="ui-title  1"
  id="test"
>
  <strong>
    Test
  </strong>
</h1>
`;

exports[`svelte/UITitle > renders correctly - with itemprop 1`] = `
<h1
  class="ui-title  1"
  itemprop="name"
>
  <strong>
    *Test*
  </strong>
</h1>
`;
